cmake: fix linux installation paths and linking

--- a/engine/src/qlcconfig.h.in
+++ b/engine/src/qlcconfig.h.in
@@ -4,27 +4,27 @@
 #define APPNAME "${APPNAME}"
 #define FXEDNAME "${FXEDNAME}"
 #define APPVERSION "${APPVERSION}"
-#define DOCSDIR "${DOCSDIR}"
-#define INPUTPROFILEDIR "${INPUTPROFILEDIR}"
+#define DOCSDIR "${INSTALLROOT}/${DOCSDIR}"
+#define INPUTPROFILEDIR "${INSTALLROOT}/${INPUTPROFILEDIR}"
 #define USERQLCPLUSDIR "${USERDATADIR}"
 #define USERINPUTPROFILEDIR "${USERINPUTPROFILEDIR}"
-#define MIDITEMPLATEDIR "${MIDITEMPLATEDIR}"
+#define MIDITEMPLATEDIR "${INSTALLROOT}/${MIDITEMPLATEDIR}"
 #define USERMIDITEMPLATEDIR "${USERMIDITEMPLATEDIR}"
-#define MODIFIERSTEMPLATEDIR "${MODIFIERSTEMPLATEDIR}"
+#define MODIFIERSTEMPLATEDIR "${INSTALLROOT}/${MODIFIERSTEMPLATEDIR}"
 #define USERMODIFIERSTEMPLATEDIR "${USERMODIFIERSTEMPLATEDIR}"
-#define FIXTUREDIR "${FIXTUREDIR}"
+#define FIXTUREDIR "${INSTALLROOT}/${FIXTUREDIR}"
 #define USERFIXTUREDIR "${USERFIXTUREDIR}"
-#define PLUGINDIR "${PLUGINDIR}"
-#define AUDIOPLUGINDIR "${AUDIOPLUGINDIR}"
-#define TRANSLATIONDIR "${TRANSLATIONDIR}"
-#define RGBSCRIPTDIR "${RGBSCRIPTDIR}"
+#define PLUGINDIR "${INSTALLROOT}/${PLUGINDIR}"
+#define AUDIOPLUGINDIR "${INSTALLROOT}/${AUDIOPLUGINDIR}"
+#define TRANSLATIONDIR "${INSTALLROOT}/${TRANSLATIONDIR}"
+#define RGBSCRIPTDIR "${INSTALLROOT}/${RGBSCRIPTDIR}"
 #define USERRGBSCRIPTDIR "${USERRGBSCRIPTDIR}"
-#define GOBODIR "${GOBODIR}"
-#define WEBFILESDIR "${WEBFILESDIR}"
+#define GOBODIR "${INSTALLROOT}/${GOBODIR}"
+#define WEBFILESDIR "${INSTALLROOT}/${WEBFILESDIR}"
 
 #ifdef QMLUI
-#define MESHESDIR "${MESHESDIR}"
-#define COLORFILTERSDIR "${COLORFILTERSDIR}"
+#define MESHESDIR "${INSTALLROOT}/${MESHESDIR}"
+#define COLORFILTERSDIR "${INSTALLROOT}/${COLORFILTERSDIR}"
 #define USERCOLORFILTERSDIR "${USERCOLORFILTERSDIR}"
 #endif	/* QMLUI */
 
