--- a/plugins/midi/src/alsa/CMakeLists.txt
+++ b/plugins/midi/src/alsa/CMakeLists.txt
@@ -48,10 +48,13 @@ target_include_directories(${module_name} PRIVATE
     ../common
 )
 
+find_package(ALSA REQUIRED)
+
 target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
     Qt${QT_MAJOR_VERSION}::Widgets
+    ${ALSA_LIBRARIES}
 )
 
 install(TARGETS ${module_name}
