--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,8 +14,8 @@ configuration:
   - Release
 
 install:
-    #- pacman --noconfirm -Sy
-    #- pacman --noconfirm --needed -S pacman-mirrors
+    - pacman --noconfirm -Sy
+    - pacman --noconfirm --needed -S pacman-mirrors
     - pacman --noconfirm -Syu
     - pacman --noconfirm --needed -Sy mingw32/mingw-w64-i686-libmad mingw32/mingw-w64-i686-libsndfile mingw32/mingw-w64-i686-flac mingw32/mingw-w64-i686-fftw mingw32/mingw-w64-i686-libusb
     - pacman --noconfirm --needed -Sy mingw32/mingw-w64-i686-qt5 unzip mingw32/mingw-w64-i686-nsis
