--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,5 +1,7 @@
 project(engine)
 
+pkg_check_modules(FFTW3 IMPORTED_TARGET fftw3)
+
 add_subdirectory(audio)
 add_subdirectory(src)
 if(NOT ANDROID AND NOT IOS)
