--- a/engine/audio/plugins/sndfile/CMakeLists.txt
+++ b/engine/audio/plugins/sndfile/CMakeLists.txt
@@ -8,6 +8,7 @@ target_sources(${module_name} PRIVATE
 )
 target_include_directories(${module_name} PRIVATE
     ../../src
+    ${SNDFILE_INCLUDE_DIRS}
 )
 
 target_link_libraries(${module_name} PRIVATE
