Fixed installation of translation and fixtures

--- a/resources/fixtures/CMakeLists.txt
+++ b/resources/fixtures/CMakeLists.txt
@@ -1,19 +1,14 @@
 project(fixtures)
 
-# # Find all subdirectories (except ./scripts and .)
-# file(GLOB DIRECTORIES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *)
-# list(FILTER DIRECTORIES EXCLUDE REGEX "^scripts$")
-# list(REMOVE_ITEM DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
-
-# # Add a subdirectory for each directory found
-# foreach(directory ${DIRECTORIES})
-#     add_subdirectory(${directory})
-# endforeach()
-
 # Install FixturesMap.xml and all subdirectories (except ./scripts and .)
-file(GLOB_RECURSE FILES_AND_DIRECTORIES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
+file(GLOB FILES_AND_DIRECTORIES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
 list(FILTER FILES_AND_DIRECTORIES EXCLUDE REGEX "^scripts$")
-list(REMOVE_ITEM FILES_AND_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
-list(APPEND FILES_AND_DIRECTORIES FixturesMap.xml)
+list(REMOVE_ITEM FILES_AND_DIRECTORIES ".")
 
-install(FILES ${FILES_AND_DIRECTORIES} DESTINATION ${INSTALLROOT}/${FIXTUREDIR})
+foreach(FILE_AND_DIRECTORY ${FILES_AND_DIRECTORIES})
+    if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/${FILE_AND_DIRECTORY}")
+        install(DIRECTORY ${FILE_AND_DIRECTORY} DESTINATION ${INSTALLROOT}/${FIXTUREDIR})
+    endif()
+endforeach()
+
+install(FILES FixturesMap.xml DESTINATION ${INSTALLROOT}/${FIXTUREDIR})
