.a files shouldn't be installed at all

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,11 @@ if((((QT_VERSION_MAJOR LESS 5)) AND (MACOS)))
     pkg_check_modules(PORTAUDIO_2 IMPORTED_TARGET portaudio-2.0)
 endif()
 
+if(WIN32)
+    # Prefix all shared libraries with ''.
+    set(CMAKE_SHARED_LIBRARY_PREFIX "")
+endif()
+
 add_subdirectory(hotplugmonitor)
 add_subdirectory(engine)
 add_subdirectory(resources)
