--- a/engine/audio/plugins/mad/CMakeLists.txt
+++ b/engine/audio/plugins/mad/CMakeLists.txt
@@ -27,5 +27,6 @@ target_link_libraries(${module_name} PRIVATE
 )
 
 install(TARGETS ${module_name}
-    DESTINATION ${INSTALLROOT}/${AUDIOPLUGINDIR}
+    LIBRARY DESTINATION ${INSTALLROOT}/${AUDIOPLUGINDIR}
+    RUNTIME DESTINATION ${INSTALLROOT}/${AUDIOPLUGINDIR}
 )
