--- a/engine/src/CMakeLists.txt
+++ b/engine/src/CMakeLists.txt
@@ -204,5 +204,6 @@ endif()
 set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES ${CONFIGFILE})
 
 install(TARGETS ${module_name}
-    DESTINATION ${INSTALLROOT}/${LIBSDIR}
+    LIBRARY DESTINATION ${INSTALLROOT}/${LIBSDIR}
+    RUNTIME DESTINATION ${INSTALLROOT}/${LIBSDIR}
 )
