--- a/plugins/loopback/src/CMakeLists.txt
+++ b/plugins/loopback/src/CMakeLists.txt
@@ -44,7 +44,8 @@ if(WIN32)
 endif()
 
 install(TARGETS ${module_name}
-    DESTINATION ${INSTALLROOT}/${PLUGINDIR}
+    LIBRARY DESTINATION ${INSTALLROOT}/${PLUGINDIR}
+    RUNTIME DESTINATION ${INSTALLROOT}/${PLUGINDIR}
 )
 
 if (UNIX AND NOT APPLE)
