--- a/plugins/midi/src/alsa/CMakeLists.txt
+++ b/plugins/midi/src/alsa/CMakeLists.txt
@@ -63,5 +63,6 @@ if (ALSA_FOUND)
 endif()
 
 install(TARGETS ${module_name}
-    DESTINATION ${INSTALLROOT}/${PLUGINDIR}
+    LIBRARY DESTINATION ${INSTALLROOT}/${PLUGINDIR}
+    RUNTIME DESTINATION ${INSTALLROOT}/${PLUGINDIR}
 )
