--- a/plugins/os2l/CMakeLists.txt
+++ b/plugins/os2l/CMakeLists.txt
@@ -40,7 +40,8 @@ target_link_libraries(${module_name} PRIVATE
 )
 
 install(TARGETS ${module_name}
-    DESTINATION ${INSTALLROOT}/${PLUGINDIR}
+    LIBRARY DESTINATION ${INSTALLROOT}/${PLUGINDIR}
+    RUNTIME DESTINATION ${INSTALLROOT}/${PLUGINDIR}
 )
 
 if (UNIX AND NOT APPLE)
