--- a/plugins/udmx/src/CMakeLists.txt
+++ b/plugins/udmx/src/CMakeLists.txt
@@ -60,7 +60,8 @@ if(${LIBUSB_1_FOUND})
 endif()
 
 install(TARGETS ${module_name}
-    DESTINATION ${INSTALLROOT}/${PLUGINDIR}
+    LIBRARY DESTINATION ${INSTALLROOT}/${PLUGINDIR}
+    RUNTIME DESTINATION ${INSTALLROOT}/${PLUGINDIR}
 )
 
 if (UNIX AND NOT APPLE)
