--- a/plugins/velleman/src/CMakeLists.txt
+++ b/plugins/velleman/src/CMakeLists.txt
@@ -62,5 +62,6 @@ else()
 endif()
 
 install(TARGETS ${module_name}
-    DESTINATION ${INSTALLROOT}/${PLUGINDIR}
+    LIBRARY DESTINATION ${INSTALLROOT}/${PLUGINDIR}
+    RUNTIME DESTINATION ${INSTALLROOT}/${PLUGINDIR}
 )
