--- a/ui/src/CMakeLists.txt
+++ b/ui/src/CMakeLists.txt
@@ -762,5 +762,6 @@ if(WIN32)
 endif()
 
 install(TARGETS ${module_name}
-    DESTINATION ${INSTALLROOT}/${LIBSDIR}
+    LIBRARY DESTINATION ${INSTALLROOT}/${LIBSDIR}
+    RUNTIME DESTINATION ${INSTALLROOT}/${LIBSDIR}
 )
