--- a/webaccess/src/CMakeLists.txt
+++ b/webaccess/src/CMakeLists.txt
@@ -102,7 +102,7 @@ if(UNIX AND NOT MACOS)
     )
 endif()
 
-
 install(TARGETS ${module_name}
-    DESTINATION ${INSTALLROOT}/${LIBSDIR}
+    LIBRARY DESTINATION ${INSTALLROOT}/${LIBSDIR}
+    RUNTIME DESTINATION ${INSTALLROOT}/${LIBSDIR}
 )
