* Fixed bug in installation of Windows platform * Added resource and icons of Windows application

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,6 @@ add_subdirectory(hotplugmonitor)
 add_subdirectory(engine)
 add_subdirectory(resources)
 add_subdirectory(plugins)
-add_subdirectory(platforms)
 if(qmlui)
     message("Building QLC+ 5 QML UI")
     add_subdirectory(qmlui)
@@ -193,3 +192,6 @@ if(NOT TARGET uninstall)
   add_custom_target(uninstall
     COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
 endif()
+
+# Leave this on the last row of this file
+add_subdirectory(platforms)
