cmake: do not install individual qm files
but rather pack them into a single archive

--- a/webaccess/src/CMakeLists.txt
+++ b/webaccess/src/CMakeLists.txt
@@ -106,6 +106,5 @@ endif()
 
 install(TARGETS ${module_name}
     LIBRARY DESTINATION ${INSTALLROOT}/${LIBSDIR}
+	RUNTIME DESTINATION ${INSTALLROOT}/${LIBSDIR}
 )
-
-install(FILES ${QM_FILES} DESTINATION ${INSTALLROOT}/${TRANSLATIONDIR})
