--- a/ui/src/CMakeLists.txt
+++ b/ui/src/CMakeLists.txt
@@ -20,7 +20,6 @@ else()
 endif()
 
 if((((QT_VERSION_MAJOR LESS 5)) AND (MACOS)))
-    pkg_check_modules(PORTAUDIO_2 IMPORTED_TARGET portaudio-2.0)
     if (${PORTAUDIO_2_FOUND})
         target_compile_definitions(${module_name} PUBLIC
             HAS_PORTAUDIO
@@ -763,5 +762,6 @@ if(WIN32)
 endif()
 
 install(TARGETS ${module_name}
-    DESTINATION ${INSTALLROOT}/${LIBSDIR}
+    LIBRARY DESTINATION ${INSTALLROOT}/${LIBSDIR}
+    RUNTIME DESTINATION ${INSTALLROOT}/${LIBSDIR}
 )
