--- a/engine/audio/plugins/mad/CMakeLists.txt
+++ b/engine/audio/plugins/mad/CMakeLists.txt
@@ -1,5 +1,3 @@
-# pkg_check_modules(MAD IMPORTED_TARGET REQUIRED mad)
-
 if(NOT MAD_INCLUDE_DIRS)
     find_path(MAD_INCLUDE_DIR mad.h PATH_SUFFIXES include)
     if(NOT MAD_INCLUDE_DIR)
@@ -29,5 +27,6 @@ target_link_libraries(${module_name} PRIVATE
 )
 
 install(TARGETS ${module_name}
-    DESTINATION ${INSTALLROOT}/${AUDIOPLUGINDIR}
+    LIBRARY DESTINATION ${INSTALLROOT}/${AUDIOPLUGINDIR}
+    RUNTIME DESTINATION ${INSTALLROOT}/${AUDIOPLUGINDIR}
 )
