--- a/plugins/dmxusb/src/CMakeLists.txt
+++ b/plugins/dmxusb/src/CMakeLists.txt
@@ -26,68 +26,30 @@ add_library(${module_name}
     ${QM_FILES}
 )
 
-# Uncomment the following to use QtSerialPort before
-# any other platform specific library
-# set(qtserial ON)
-
-# Use FTD2XX by default only in Windows.
 if(WIN32)
-    set(ftd2xx ON)
-    message("Building with FTD2xx support.")
+    set(FTD2XXDIR "C:/Qt/D2XXSDK")
+    target_link_libraries(${module_name} PRIVATE
+        ${FTD2XXDIR}/libftd2xx.a
+    )
+    target_include_directories(${module_name} PRIVATE
+        ${FTD2XXDIR}
+    )
+    set(WITH_D2XX TRUE)
 endif()
 
 if(UNIX)
-    set(libftdi ON)
-endif()
-
-if(APPLE)
-    set(qtserial ON)
-endif()
-
-if(qtserial)
-    message("Building with QtSerialport support.")
-    target_compile_definitions(${module_name} PRIVATE
-        QTSERIAL
-    )
-
-    target_link_libraries(${module_name} PRIVATE
-        Qt${QT_MAJOR_VERSION}::SerialPort
-    )
-endif()
-
-
-if(ftd2xx)
-    if(WIN32)
-        set(FTD2XXDIR "C:/Qt/D2XXSDK")
-        target_link_libraries(${module_name} PRIVATE
-            ${FTD2XXDIR}/i386/libftd2xx.a
-        )
-        target_include_directories(${module_name} PRIVATE
-            ${FTD2XXDIR}
-        )
-    endif()
-    target_compile_definitions(${module_name} PRIVATE FTD2XX)
-endif()
-
-if(libftdi)
-    pkg_check_modules(LIBFTDI1 IMPORTED_TARGET libftdi1)
+    pkg_check_modules(LIBFTDI1 IMPORTED_TARGET libftdi1 libusb-1.0)
     pkg_check_modules(LIBFTDI IMPORTED_TARGET libftdi libusb)
 
     if (LIBFTDI1_FOUND)
         # Add the include directories to the project
-        target_include_directories(${module_name} PRIVATE
-            ${LIBFTDI1_INCLUDE_DIRS}
-            ${LIBUSB1_INCLUDE_DIRS}
-        )
-
-        # Link your executable against the libftdi1 library
-        target_link_libraries(${module_name} PRIVATE
-            ${LIBFTDI1_LIBRARIES}
-            ${LIBUSB1_LIBRARIES}
-        )
+        target_include_directories(${module_name} PRIVATE ${LIBFTDI1_INCLUDE_DIRS})
 
         target_compile_definitions(${module_name} PRIVATE LIBFTDI1)
-        execute_process(COMMAND pkg-config --modversion libftdi1 OUTPUT_VARIABLE LIBFTDI1_VERSION)  # Get libFTDI1 version
+        # execute_process(COMMAND pkg-config --modversion libftdi1 OUTPUT_VARIABLE LIBFTDI1_VERSION)  # Get libFTDI1 version
+
+        # Link your executable against the libftdi1 library
+        target_link_libraries(${module_name} PRIVATE ${LIBFTDI1_LIBRARIES})
 
         if (APPLE)
             include(../../../platforms/macos/nametool.pri)
@@ -99,6 +61,7 @@ if(libftdi)
         endif()
 
         message("Building with libFTDI1 support. Version: ${LIBFTDI1_VERSION}")
+        set(WITH_LIBFTDI TRUE)
 
         if (NOT ${LIBFTDI1_VERSION} VERSION_LESS "1.5")
             message("Using v1.5+ buffer flush API")
@@ -110,9 +73,10 @@ if(libftdi)
         target_include_directories(${module_name} PRIVATE ${LIBFTDI_INCLUDE_DIRS})
 
         # Link your executable against the libftdi library
-        target_link_libraries(${module_name} PRIVATE ${LIBFTDI_LIBRARIES})
+        link_libraries(LIBFTDI_LIBRARIES)
 
         target_compile_definitions(${module_name} PRIVATE LIBFTDI)
+        target_link_libraries(${module_name} PRIVATE ${LIBFTDI_LIBRARIES})
 
         if (APPLE)
             include(../../../platforms/macos/nametool.pri)
@@ -123,6 +87,7 @@ if(libftdi)
         endif()
 
         message("Building with libFTDI support.")
+        set(WITH_LIBFTDI TRUE)
 
     else()
         message(FATAL_ERROR "Neither libftdi-0.X nor libftdi-1.X found!")
@@ -156,6 +121,11 @@ target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Widgets
 )
 
+if(WIN32)
+    target_compile_definitions(${module_name} PRIVATE FTD2XX)
+    message("Building with FTD2xx support.")
+endif()
+
 if(UNIX)
     target_sources(${module_name} PUBLIC
         euroliteusbdmxpro.cpp euroliteusbdmxpro.h
@@ -169,19 +139,44 @@ if(APPLE)
     )
 endif()
 
-if(qtserial)
-    target_sources(${module_name} PUBLIC
-        qtserial-interface.cpp qtserial-interface.h
-    )
-endif()
+# always include QtSerialPort
+target_sources(${module_name} PUBLIC
+    qtserial-interface.cpp qtserial-interface.h
+)
 
-if(ftd2xx)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS SerialPort)
+
+target_compile_definitions(${module_name} PRIVATE
+    QTSERIAL
+)
+
+target_link_libraries(${module_name} PRIVATE
+    Qt${QT_MAJOR_VERSION}::SerialPort
+)
+
+if(WITH_D2XX)
     target_sources(${module_name} PUBLIC
         ftd2xx-interface.cpp ftd2xx-interface.h
     )
+
+    target_compile_definitions(${module_name} PRIVATE
+        FTD2XX
+    )
 endif()
 
-if(libftdi)
+if((WITH_D2XX) AND (WIN32))
+    target_include_directories(${module_name} PRIVATE
+        C:/Qt/D2XXSDK
+    )
+
+    target_link_libraries(${module_name} PRIVATE
+        # Remove: LC:/Qt/D2XXSDK/i386
+        C:/Qt/D2XXSDK/i386/libftd2xx.a
+        ftd2xx
+    )
+endif()
+
+if(WITH_LIBFTDI)
     target_sources(${module_name} PUBLIC
         libftdi-interface.cpp libftdi-interface.h
     )
@@ -196,6 +191,7 @@ if (UNIX AND NOT APPLE)
 endif()
 
 install(TARGETS ${module_name}
-    LIBRARY DESTINATION ${INSTALLROOT}/${PLUGINDIR}
-    RUNTIME DESTINATION ${INSTALLROOT}/${PLUGINDIR}
+    DESTINATION ${INSTALLROOT}/${PLUGINDIR}
 )
+
+install(FILES ${QM_FILES} DESTINATION ${INSTALLROOT}/${TRANSLATIONDIR})
