--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -367,13 +367,16 @@ jobs:
           sed -i -e 's/add_subdirectory(qlci18n)/#add_subdirectory(qlci18n)/g' engine/test/CMakeLists.txt
           # disable Velleman plugin
           sed -i -e 's/    add_subdirectory(velleman)/#    add_subdirectory(velleman)/g' plugins/CMakeLists.txt
+          # fix MSYS2 system path
+          sed -i -e 's/$ENV{SystemDrive}\/msys64/D:\/a\/_temp\/msys64/g' platforms/windows/CMakeLists.txt
+          # fix project path in NSIS script
+          sed -i -e 's/c\:\\Qt/\/d\/a\/qlcplus/g' platforms/windows/qlcplus4Qt5.nsi
+          cat qlcplus4Qt5.nsi | grep QLCPLUS_HOME
 
       - name: Configure build for Windows
         shell: msys2 {0}
         run: |
           set MSYSTEM=MINGW32
-          # fix MSYS2 system path
-          sed -i -e 's/$ENV{SystemDrive}\/msys64/D:\/a\/_temp\/msys64/g' platforms/windows/CMakeLists.txt
           mkdir build
           cd build
           cmake -G "Unix Makefiles" ..
@@ -399,8 +402,6 @@ jobs:
         run: |
           set MSYSTEM=MINGW32
           cd /c/qlcplus
-          sed -i -e 's/c\:\\Qt/\/d\/a\/qlcplus/g' qlcplus4Qt5.nsi
-          cat qlcplus4Qt5.nsi | grep QLCPLUS_HOME
           echo 'Creating package...'
           makensis -V4 -X'SetCompressor /FINAL lzma' qlcplus4Qt5.nsi
           #set CURRDATE=`date +%Y%m%d`
