--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -371,7 +371,7 @@ jobs:
           sed -i -e 's/$ENV{SystemDrive}\/msys64/D:\/a\/_temp\/msys64/g' platforms/windows/CMakeLists.txt
           # fix project path in NSIS script
           sed -i -e 's/c\:\\Qt/\/d\/a\/qlcplus/g' platforms/windows/qlcplus4Qt5.nsi
-          cat qlcplus4Qt5.nsi | grep QLCPLUS_HOME
+          cat platforms/windows/qlcplus4Qt5.nsi | grep QLCPLUS_HOME
 
       - name: Configure build for Windows
         shell: msys2 {0}
