actions: install missing QM files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -395,7 +395,8 @@ jobs:
           #echo 'Silently installing QLC+...'
           cd build
           make install
-          #cp *.qm ${INSTALL_ROOT}
+          cd ..
+          cp *.qm /c/qlcplus
 
       - name: Build installation package
         shell: msys2 {0}
